# usbdriver-fix

./: LICENSE  README.md  app.spec  pyproject.toml
.github/workflows/: build.yml
scripts/: build.sh
src/: runapp.py
src/usbdriver_fix/: app.py  host.py  usb.py
src/usbdriver_fix/usb/: __init__.py  fix.py  utils.py
